# Graphx

./: CMakeLists.txt  main.cpp
Algorithms/: BFS.h  Color.h  DFS.h  MIS.cpp.h  PageRank.h  SSSP.h  TriangleCounting.h
DataStructures/: AdjacencyList.h  AdjacencyMatrix.h  BaseStructure.h  DataStructure_Interface.h
Graph/: BaseGraph.h  SimpleGraph.h
Node/: Edge.h  EdgeData.h  Node.h
util/: Constants.h  GraphRepresentation.h
